COrrected Dorrie's last name in body of biography and added css element to handle phone link on IPhone

--- a/main.css
+++ b/main.css
@@ -7,6 +7,11 @@ body {
   color: #5a5a5a;
 }
 
+a[href^="tel"] {
+  color: inherit;
+  text-decoration: none;
+}
+
 
 /* CUSTOMIZE THE NAVBAR
 -------------------------------------------------- */
